--- a/data/ui/main.ui
+++ b/data/ui/main.ui
@@ -1,26 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
-  <object class="GtkListStore" id="liststore1"/>
-  <object class="GtkListStore" id="variant_liststore">
+  <object class="GtkListStore" id="liststore_rules">
     <columns>
-      <!-- column-name gchararray -->
+      <!-- column-name enable -->
+      <column type="gboolean"/>
+      <!-- column-name rule_name -->
+      <column type="gchararray"/>
+      <!-- column-name rule_description -->
       <column type="gchararray"/>
     </columns>
     <data>
       <row>
-        <col id="0">eng</col>
+        <col id="0">False</col>
+        <col id="1" translatable="yes">bootimage</col>
+        <col id="2" translatable="yes"></col>
       </row>
       <row>
-        <col id="0">user</col>
+        <col id="0">False</col>
+        <col id="1" translatable="yes">systemimage</col>
+        <col id="2" translatable="yes"></col>
       </row>
       <row>
-        <col id="0">userdebug</col>
+        <col id="0">False</col>
+        <col id="1" translatable="yes">userdataimage</col>
+        <col id="2" translatable="yes"></col>
+      </row>
+      <row>
+        <col id="0">False</col>
+        <col id="1" translatable="yes">recoveryimage</col>
+        <col id="2" translatable="yes"></col>
+      </row>
+      <row>
+        <col id="0">False</col>
+        <col id="1" translatable="yes">target-files-package</col>
+        <col id="2" translatable="yes"></col>
+      </row>
+      <row>
+        <col id="0">False</col>
+        <col id="1" translatable="yes">cts</col>
+        <col id="2" translatable="yes"></col>
       </row>
     </data>
   </object>
   <object class="GtkWindow" id="window1">
     <property name="can_focus">False</property>
+    <property name="default_width">800</property>
+    <property name="default_height">640</property>
     <child>
       <object class="GtkBox" id="box1">
         <property name="visible">True</property>
@@ -84,9 +110,14 @@
                         <property name="can_focus">False</property>
                         <property name="left_padding">12</property>
                         <child>
-                          <object class="GtkComboBox" id="combobox_source">
+                          <object class="GtkFileChooserButton" id="chooser_source_top">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
+                            <property name="orientation">vertical</property>
+                            <property name="action">select-folder</property>
+                            <property name="preview_widget_active">False</property>
+                            <property name="use_preview_label">False</property>
+                            <property name="title" translatable="yes">Select an Android Source Top</property>
                           </object>
                         </child>
                       </object>
@@ -121,6 +152,7 @@
                           <object class="GtkComboBoxText" id="combobox_product">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
+                            <property name="entry_text_column">0</property>
                           </object>
                         </child>
                       </object>
@@ -155,6 +187,7 @@
                           <object class="GtkComboBoxText" id="combobox_variant">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
+                            <property name="entry_text_column">0</property>
                             <items>
                               <item>eng</item>
                               <item>user</item>
@@ -192,7 +225,52 @@
                 <property name="can_focus">True</property>
                 <property name="shadow_type">in</property>
                 <child>
-                  <placeholder/>
+                  <object class="GtkTreeView" id="treeview_rules">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="model">liststore_rules</property>
+                    <property name="headers_clickable">False</property>
+                    <property name="rules_hint">True</property>
+                    <property name="search_column">1</property>
+                    <property name="enable_grid_lines">horizontal</property>
+                    <property name="enable_tree_lines">True</property>
+                    <child internal-child="selection">
+                      <object class="GtkTreeSelection" id="treeview-selection1"/>
+                    </child>
+                    <child>
+                      <object class="GtkTreeViewColumn" id="column_enable">
+                        <property name="title">Enable</property>
+                        <child>
+                          <object class="GtkCellRendererToggle" id="renderer_enable"/>
+                          <attributes>
+                            <attribute name="active">0</attribute>
+                          </attributes>
+                        </child>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkTreeViewColumn" id="column_rule">
+                        <property name="title">Rule</property>
+                        <child>
+                          <object class="GtkCellRendererText" id="renderer_rule"/>
+                          <attributes>
+                            <attribute name="text">1</attribute>
+                          </attributes>
+                        </child>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkTreeViewColumn" id="column_description">
+                        <property name="title">Description</property>
+                        <child>
+                          <object class="GtkCellRendererText" id="renderer_description"/>
+                          <attributes>
+                            <attribute name="text">2</attribute>
+                          </attributes>
+                        </child>
+                      </object>
+                    </child>
+                  </object>
                 </child>
               </object>
               <packing>
@@ -211,7 +289,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <child>
-                      <object class="GtkCheckButton" id="checkbutton1">
+                      <object class="GtkCheckButton" id="btn_clean">
                         <property name="label" translatable="yes">Clean before build</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
@@ -233,7 +311,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <child>
-                      <object class="GtkCheckButton" id="checkbutton2">
+                      <object class="GtkCheckButton" id="btn_ccache">
                         <property name="label" translatable="yes">Use Compiler Cache</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
@@ -251,12 +329,12 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkAlignment" id="alignment6">
+                  <object class="GtkAlignment" id="alignment8">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <child>
-                      <object class="GtkCheckButton" id="checkbutton3">
-                        <property name="label" translatable="yes">Show commands</property>
+                      <object class="GtkCheckButton" id="btn_parallel_build">
+                        <property name="label" translatable="yes">Use parallel build(-j)</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">False</property>
@@ -270,6 +348,28 @@
                     <property name="expand">False</property>
                     <property name="fill">True</property>
                     <property name="position">2</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkAlignment" id="alignment6">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <child>
+                      <object class="GtkCheckButton" id="btn_verbose">
+                        <property name="label" translatable="yes">Show commands</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">False</property>
+                        <property name="use_action_appearance">False</property>
+                        <property name="xalign">0</property>
+                        <property name="draw_indicator">True</property>
+                      </object>
+                    </child>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">3</property>
                   </packing>
                 </child>
                 <child>
@@ -294,7 +394,16 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <child>
-              <placeholder/>
+              <object class="GtkScrolledWindow" id="TerminalScroll">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="hexpand">True</property>
+                <property name="vexpand">True</property>
+                <property name="shadow_type">in</property>
+                <child>
+                  <placeholder/>
+                </child>
+              </object>
             </child>
             <child type="label">
               <object class="GtkLabel" id="label4">
